stellar-core/src/syntax/snapshots/stellar_core__syntax__parse__tests__binary_expr.snap
---
source: stellar-core/src/syntax/parse.rs
expression: parse(token_stream)
snapshot_kind: text
---
Ok(
    [
        Expression(
            Binary {
                operator: BinaryOperator {
                    kind: Minus,
                    span: Span {
                        start: Location {
                            line: 2,
                            column: 13,
                            index: 18,
                        },
                        end: Location {
                            line: 2,
                            column: 14,
                            index: 19,
                        },
                    },
                },
                left: Binary {
                    operator: BinaryOperator {
                        kind: Plus,
                        span: Span {
                            start: Location {
                                line: 1,
                                column: 2,
                                index: 2,
                            },
                            end: Location {
                                line: 1,
                                column: 3,
                                index: 3,
                            },
                        },
                    },
                    left: Identifier(
                        Identifier {
                            name: StringId("a"),
                            span: Span {
                                start: Location {
                                    line: 1,
                                    column: 0,
                                    index: 0,
                                },
                                end: Location {
                                    line: 1,
                                    column: 1,
                                    index: 1,
                                },
                            },
                        },
                    ),
                    right: Binary {
                        operator: BinaryOperator {
                            kind: Star,
                            span: Span {
                                start: Location {
                                    line: 2,
                                    column: 3,
                                    index: 8,
                                },
                                end: Location {
                                    line: 2,
                                    column: 4,
                                    index: 9,
                                },
                            },
                        },
                        left: Integer {
                            value: 2,
                            span: Span {
                                start: Location {
                                    line: 2,
                                    column: 1,
                                    index: 6,
                                },
                                end: Location {
                                    line: 2,
                                    column: 2,
                                    index: 7,
                                },
                            },
                        },
                        right: Binary {
                            operator: BinaryOperator {
                                kind: Plus,
                                span: Span {
                                    start: Location {
                                        line: 2,
                                        column: 8,
                                        index: 13,
                                    },
                                    end: Location {
                                        line: 2,
                                        column: 9,
                                        index: 14,
                                    },
                                },
                            },
                            left: Integer {
                                value: 3,
                                span: Span {
                                    start: Location {
                                        line: 2,
                                        column: 6,
                                        index: 11,
                                    },
                                    end: Location {
                                        line: 2,
                                        column: 7,
                                        index: 12,
                                    },
                                },
                            },
                            right: Identifier(
                                Identifier {
                                    name: StringId("b"),
                                    span: Span {
                                        start: Location {
                                            line: 2,
                                            column: 10,
                                            index: 15,
                                        },
                                        end: Location {
                                            line: 2,
                                            column: 11,
                                            index: 16,
                                        },
                                    },
                                },
                            ),
                        },
                    },
                },
                right: Integer {
                    value: 3,
                    span: Span {
                        start: Location {
                            line: 2,
                            column: 15,
                            index: 20,
                        },
                        end: Location {
                            line: 2,
                            column: 16,
                            index: 21,
                        },
                    },
                },
            },
        ),
        Expression(
            Binary {
                operator: BinaryOperator {
                    kind: Plus,
                    span: Span {
                        start: Location {
                            line: 3,
                            column: 8,
                            index: 30,
                        },
                        end: Location {
                            line: 3,
                            column: 9,
                            index: 31,
                        },
                    },
                },
                left: String {
                    value: StringId("hello"),
                    span: Span {
                        start: Location {
                            line: 3,
                            column: 0,
                            index: 22,
                        },
                        end: Location {
                            line: 3,
                            column: 7,
                            index: 29,
                        },
                    },
                },
                right: String {
                    value: StringId("world"),
                    span: Span {
                        start: Location {
                            line: 3,
                            column: 10,
                            index: 32,
                        },
                        end: Location {
                            line: 3,
                            column: 17,
                            index: 39,
                        },
                    },
                },
            },
        ),
    ],
)
