stellar-core/src/syntax/snapshots/stellar_core__syntax__parse__tests__empty.snap
---
source: stellar-core/src/syntax/parse.rs
expression: parse(token_stream)
snapshot_kind: text
---
Ok(
    [],
)
