stellar-core/src/syntax/snapshots/stellar_core__syntax__parse__tests__let_stmt.snap
---
source: stellar-core/src/syntax/parse.rs
expression: parse(token_stream)
snapshot_kind: text
---
Ok(
    [
        Let {
            name: Identifier {
                name: StringId("a"),
                span: Span {
                    start: Location {
                        line: 1,
                        column: 4,
                        index: 4,
                    },
                    end: Location {
                        line: 1,
                        column: 5,
                        index: 5,
                    },
                },
            },
            value: Binary {
                operator: BinaryOperator {
                    kind: Plus,
                    span: Span {
                        start: Location {
                            line: 1,
                            column: 10,
                            index: 10,
                        },
                        end: Location {
                            line: 1,
                            column: 11,
                            index: 11,
                        },
                    },
                },
                left: Integer {
                    value: 3,
                    span: Span {
                        start: Location {
                            line: 1,
                            column: 8,
                            index: 8,
                        },
                        end: Location {
                            line: 1,
                            column: 9,
                            index: 9,
                        },
                    },
                },
                right: Integer {
                    value: 2,
                    span: Span {
                        start: Location {
                            line: 1,
                            column: 12,
                            index: 12,
                        },
                        end: Location {
                            line: 1,
                            column: 13,
                            index: 13,
                        },
                    },
                },
            },
        },
    ],
)
