stellar-core/src/syntax/snapshots/stellar_core__syntax__parse__tests__list.snap
---
source: stellar-core/src/syntax/parse.rs
expression: parse(token_stream)
snapshot_kind: text
---
Ok(
    [
        Expression(
            List {
                expressions: [
                    Integer {
                        value: 1,
                        span: Span {
                            start: Location {
                                line: 1,
                                column: 1,
                                index: 1,
                            },
                            end: Location {
                                line: 1,
                                column: 2,
                                index: 2,
                            },
                        },
                    },
                    Integer {
                        value: 2,
                        span: Span {
                            start: Location {
                                line: 1,
                                column: 4,
                                index: 4,
                            },
                            end: Location {
                                line: 1,
                                column: 5,
                                index: 5,
                            },
                        },
                    },
                ],
                span: Span {
                    start: Location {
                        line: 1,
                        column: 0,
                        index: 0,
                    },
                    end: Location {
                        line: 1,
                        column: 6,
                        index: 6,
                    },
                },
            },
        ),
        Expression(
            List {
                expressions: [
                    Integer {
                        value: 1,
                        span: Span {
                            start: Location {
                                line: 2,
                                column: 1,
                                index: 8,
                            },
                            end: Location {
                                line: 2,
                                column: 2,
                                index: 9,
                            },
                        },
                    },
                    Integer {
                        value: 2,
                        span: Span {
                            start: Location {
                                line: 3,
                                column: 0,
                                index: 12,
                            },
                            end: Location {
                                line: 3,
                                column: 1,
                                index: 13,
                            },
                        },
                    },
                ],
                span: Span {
                    start: Location {
                        line: 2,
                        column: 0,
                        index: 7,
                    },
                    end: Location {
                        line: 3,
                        column: 2,
                        index: 14,
                    },
                },
            },
        ),
        Expression(
            List {
                expressions: [
                    Integer {
                        value: 1,
                        span: Span {
                            start: Location {
                                line: 5,
                                column: 0,
                                index: 17,
                            },
                            end: Location {
                                line: 5,
                                column: 1,
                                index: 18,
                            },
                        },
                    },
                    Integer {
                        value: 2,
                        span: Span {
                            start: Location {
                                line: 6,
                                column: 0,
                                index: 21,
                            },
                            end: Location {
                                line: 6,
                                column: 1,
                                index: 22,
                            },
                        },
                    },
                ],
                span: Span {
                    start: Location {
                        line: 4,
                        column: 0,
                        index: 15,
                    },
                    end: Location {
                        line: 6,
                        column: 2,
                        index: 23,
                    },
                },
            },
        ),
        Expression(
            List {
                expressions: [
                    Integer {
                        value: 1,
                        span: Span {
                            start: Location {
                                line: 7,
                                column: 1,
                                index: 25,
                            },
                            end: Location {
                                line: 7,
                                column: 2,
                                index: 26,
                            },
                        },
                    },
                    Integer {
                        value: 2,
                        span: Span {
                            start: Location {
                                line: 8,
                                column: 0,
                                index: 28,
                            },
                            end: Location {
                                line: 8,
                                column: 1,
                                index: 29,
                            },
                        },
                    },
                ],
                span: Span {
                    start: Location {
                        line: 7,
                        column: 0,
                        index: 24,
                    },
                    end: Location {
                        line: 8,
                        column: 3,
                        index: 31,
                    },
                },
            },
        ),
    ],
)
