stellar-core/src/syntax/snapshots/stellar_core__syntax__parse__tests__play_and_wait.snap
---
source: stellar-core/src/syntax/parse.rs
expression: parse(token_stream)
snapshot_kind: text
---
Ok(
    [
        Play {
            expression: Identifier(
                Identifier {
                    name: StringId("c4"),
                    span: Span {
                        start: Location {
                            line: 1,
                            column: 5,
                            index: 5,
                        },
                        end: Location {
                            line: 1,
                            column: 7,
                            index: 7,
                        },
                    },
                },
            ),
        },
        Wait {
            expression: Integer {
                value: 1,
                span: Span {
                    start: Location {
                        line: 1,
                        column: 13,
                        index: 13,
                    },
                    end: Location {
                        line: 1,
                        column: 14,
                        index: 14,
                    },
                },
            },
        },
    ],
)
